@@ -1,5 +1,14 @@
 #include <fiddle.h>
 
+#ifdef PRIsVALUE
+# define RB_OBJ_CLASSNAME(obj) rb_obj_class(obj)
+# define RB_OBJ_STRING(obj) (obj)
+#else
+# define PRIsVALUE "s"
+# define RB_OBJ_CLASSNAME(obj) rb_obj_classname(obj)
+# define RB_OBJ_STRING(obj) StringValueCStr(obj)
+#endif
+
 VALUE cFiddleFunction;
 
 static void
@@ -53,12 +62,13 @@ rb_fiddle_new_function(VALUE address, VALUE arg_types, VALUE ret_type)
 static int
 parse_keyword_arg_i(VALUE key, VALUE value, VALUE self)
 {
-  if (key == ID2SYM(rb_intern("name"))) {
-    rb_iv_set(self, "@name", value);
-  } else {
-    rb_raise(rb_eArgError, "unknown keyword: %"PRIsVALUE, key);
-  }
-  return ST_CONTINUE;
+    if (key == ID2SYM(rb_intern("name"))) {
+	rb_iv_set(self, "@name", value);
+    } else {
+	rb_raise(rb_eArgError, "unknown keyword: %"PRIsVALUE,
+		 RB_OBJ_STRING(key));
+    }
+    return ST_CONTINUE;
 }
 
 static VALUE
