@@ -1,10 +1,10 @@
 #define RUBY_VERSION "2.0.0"
-#define RUBY_RELEASE_DATE "2014-01-19"
-#define RUBY_PATCHLEVEL 386
+#define RUBY_RELEASE_DATE "2014-01-20"
+#define RUBY_PATCHLEVEL 387
 
 #define RUBY_RELEASE_YEAR 2014
 #define RUBY_RELEASE_MONTH 1
-#define RUBY_RELEASE_DAY 19
+#define RUBY_RELEASE_DAY 20
 
 #include "ruby/version.h"
 
